# clray

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
kernel/: xcl.h
kernel/xcl/: xcl_conversions.h  xcl_types.h  xcl_vectors.h  xcl_workitem_1_0.h
src/: camera.c  camera.h  compat.h  hit_record.h  img.c  img.h  kernel.cl  main.c  main.cpp  opencl_compat.h  pbr_material.c  pbr_material.h  ray.c  ray.h  raytracer.c  raytracer.cpp  raytracer.h  rt_options.h  runner_compute.c  runner_compute.h  runner_cpu.c  runner_cpu.h  runner_opencl.c  runner_opencl.h  scene.c  scene.h  sphere.c  sphere.h  utils.c  utils.h  vec2.c  vec2.h  vec3.c  vec3.h
